k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-crud-service
  namespace: default
  labels:
    app: json-crud-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: json-crud-service
---
apiVersion: v1
kind: Service
metadata:
  name: json-crud-service-nodeport
  namespace: default
  labels:
    app: json-crud-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: json-crud-service
